2013-10-14 John Wu <John dot Wu at ACM dot org>
	* src/qExpr.h, src/qExpr.cpp, src/whereParser.yy: add support for
	keyword EXISTS to test the presence of a named column

2013-10-11 John Wu <John dot Wu at ACM dot org>
	* examples/tcapi.c: allocate rids through malloc explicitly

2013-10-09 John Wu <John dot Wu at ACM dot org>
	* src/query.h, src/query.cpp: change the term "attribute" to
	"column" in the in-line documentation

2013-10-06 John Wu <John dot Wu at ACM dot org>
	* src/bitvector.h: update the inline documentation for functions
	of bitvector::iterator and bitvector::const_iterator

2013-09-26 John Wu <John dot Wu at ACM dot org>
	* src/quaere.h: update the inline documentation of some functions
	* src/query.h, src/query.cpp: remove mentioning of operations in
	the select clauses because they are not well supported, redirect
	users to use ibis::quaere

2013-09-08 John Wu <John dot Wu at ACM dot org>
	* configure.ac: add test for /usr/bin/java when --with-java option
	is not specified
	* runconfig: add case for sith, update case for titan to use GNU
	compilers

2013-08-28 John Wu <John dot Wu at ACM dot org>
	* src/part.h, src/query.cpp: rename ibis::part::hasRIDs to
	ibis::part::explicitRIDs

2013-08-21 John Wu <John dot Wu at ACM dot org>
	* src/index.cpp: add print statement to ibis::index::clear (need
	to refrain from call pure virtual functions)
	* src/util.cpp: in constructor of timer class, move the new
	statement inside the code body

2013-08-20 John Wu <John dot Wu at ACM dot org>
	* src/column.h, src/column.cpp: add fucntion writeIndex
	* src/index.h, src/irelic.h, src/irelic.cpp, src/ibin.h,
	src/ibin.cpp, idirekte.h, idirekte.cpp, ikeywords.h,
	ikeywords.cpp: add function write that produce three arrays in
	memory
	* java/FastBit.c: add #include <stdlib.h>

2013-07-24 John Wu <John dot Wu at ACM dot org>
	* src/query.cpp, src/quaere.cpp: convert select * into a concrete
	list of names based on the current data partition (per request of